--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
             <artifactId>azure-functions-java-library</artifactId>
             <version>${azure.functions.java.library.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+
+
         <!-- Test -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
