--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <version>2.15.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.4.2.jre11</version>
+        </dependency>
+
 
         <!-- Test -->
         <dependency>
