--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,20 @@
             <version>12.4.2.jre11</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.microsoft.azure.functions/azure-functions-java-library-sql -->
+        <dependency>
+            <groupId>com.microsoft.azure.functions</groupId>
+            <artifactId>azure-functions-java-library-sql</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
 
         <!-- Test -->
         <dependency>
